fix modal height on firefox

--- a/admin-base/materialize/custom/_modal.scss
+++ b/admin-base/materialize/custom/_modal.scss
@@ -11,6 +11,7 @@
   .modal-wrapper {
     display: table-cell;
     vertical-align: middle;
+    height: 100%;
     .modal-container {
       width: 80%;
       max-width: 1200px;
